<resources>
    <string name="app_name">Biblioteca</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="txt_books">Livros</string>
    <string name="txt_login">Login</string>
    <string name="txt_title_books">Livros</string>
    <string name="txt_pesquisar">Pesquisar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_exemple_title">Nome completo do livro</string>
    <string name="txt_example_authors">Autores do livro</string>
    <string name="txt_book_detail_title">Título</string>
    <string name="txt_book_detail_abstract">Resumo</string>
    <string name="txt_book_detail_no_abstract">(sem resumo)</string>
    <string name="txt_book_detail_publisher">Editora</string>
    <string name="txt_boot_detail_authors">Autor(es)</string>
    <string name="txt_book_detail_subject">Assunto</string>
    <string name="txt_book_detail_exemplars">Exemplares disponíveis</string>
    <string name="txt_book_detail_reserve">Reservar</string>
    <string name="title_activity_login">Entrar</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">"Bem vindo!"</string>
    <string name="invalid_username">E-mail inválido</string>
    <string name="invalid_password">Senha deve ter pelo menos 5 caracteres</string>
    <string name="login_failed">"Falha no login"</string>
    <string name="text_act_auth_error_login">E-mail e(ou) senha incorreto(s)!</string>
    <string name="txt_logout">Logout</string>
</resources>