<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.features.books.BookDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_margin="10dp"
        >
        <!-- Title -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/txt_book_detail_title"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textFilter|textNoSuggestions"
            android:lines="3"
            android:minLines="3"
            android:gravity="top|start"
            android:maxLines="5"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />
        <!-- Resume -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_abstract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/txt_book_detail_abstract"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_abstract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textFilter|textNoSuggestions"
            android:lines="8"
            android:minLines="6"
            android:gravity="top|start"
            android:maxLines="10"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_abstract"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />
        <!-- Publisher -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_publisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_abstract"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/txt_book_detail_publisher"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_publisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textFilter|textNoSuggestions"
            android:lines="2"
            android:minLines="2"
            android:gravity="top|start"
            android:maxLines="5"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_publisher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />
        <!-- Subject -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_publisher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/txt_book_detail_subject"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textFilter|textNoSuggestions"
            android:lines="3"
            android:minLines="3"
            android:gravity="top|start"
            android:maxLines="5"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_subject"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />
        <!-- Authors -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_authors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_subject"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/txt_boot_detail_authors"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_authors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textFilter|textNoSuggestions"
            android:lines="3"
            android:minLines="3"
            android:gravity="top|start"
            android:maxLines="5"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_authors"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />
        <!-- Disponibilidade -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_exemplars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_authors"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/txt_book_detail_exemplars"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_exemplars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textFilter|textNoSuggestions"
            app:layout_constraintTop_toBottomOf="@id/tv_exemplars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reserve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_book_detail_reserve"
            app:layout_constraintTop_toBottomOf="@id/et_exemplars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>